Markup-Twitter-main-page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yoon-markup-challenge",
+  "name": "markup-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
